...
        android:layout_marginEnd="60dp"
        android:text="@string/all_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityTaskMasterTextView" />

    <Button
        android:id="@+id/mainActivityAddTaskBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="424dp"
        android:text="@string/add_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityTaskMasterTextView" />

    <ImageView
        android:id="@+id/mainActivitySettingsImgView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="#7535E8"
        android:contentDescription="@string/settingBtn"
...
